overflow-corrected

--- a/coden/static/css/styles.css
+++ b/coden/static/css/styles.css
@@ -1,7 +1,6 @@
 body{
     background: url('../img/—Pngtree—texture\ geometric\ black\ background_930090.jpg');
     overflow-x: hidden;
-    overflow: hidden;
     width: 100%;
 }
 #login_bg{
